--- a/src/index.html
+++ b/src/index.html
@@ -604,6 +604,14 @@
             <span class="file-info-value" id="fileSize"></span>
           </div>
         </div>
+
+        <!-- FFmpeg Download Progress -->
+        <div class="progress-container" id="ffmpegDownloadProgress" style="display: none;">
+          <div class="progress-bar">
+            <div class="progress-fill" id="ffmpegProgressFill" style="width: 0%"></div>
+          </div>
+          <p class="progress-text" id="ffmpegProgressText">Подготовка...</p>
+        </div>
       </div>
 
       <!-- Параметры обработки -->
